Created Vault Templates
Vault templates are all stored within the standard config.yml file in the root SneakyVaults folder
Player locally stored vaults are stored within their playerdata yml files
Vaults can be created using the /templates command
Template vaults can be opened by a permissioned command sender using /opentemplate (or one of its aliases)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
 # Welcome to Sneaky Vaults!
 # This config is where global player vaults will be stored!
 # You can then open these global vaults on the player & decide if they are repeatable or not in the configs
-global_vaults:
+template_vaults:
