Added CoreProtect logging on Vault Interaction

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,7 @@
 main: net.sneakymouse.sneakyvaults.SneakyVaults
 version: 1.0
 name: SneakyVaults
+softdepend:
+  - CoreProtect
 authors:
   - Bungo
