feat: Version-A for blacklisting MS items by their magicitem name

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,4 @@
 # This config is where global player vaults will be stored!
 # You can then open these global vaults on the player & decide if they are repeatable or not in the configs
 template_vaults:
+banned_ms_items:
